--- a/notebooks/1_Authentication.ipynb
+++ b/notebooks/1_Authentication.ipynb
@@ -9,11 +9,10 @@
     "# Copyright 2026 Cognite AS\n",
     "## Authentication\n",
     "\n",
-    "- Instantiating a `CogniteClient` using different methods:\n",
-    "  - Interactive login\n",
+    "- Instantiating a `CogniteClient` can be done using different methods:\n",
+    "  - Interactive login (we will use)\n",
     "  - Using device code\n",
-    "  - Using client credentials\n",
-    "- Checking the login status"
+    "  - Using client credentials"
    ]
   },
   {
@@ -70,16 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip install cognite-sdk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "UqIYl20WemoT"
    },
@@ -98,16 +88,13 @@
     "id": "6icD8Qewd4ua"
    },
    "source": [
-    "### Authenticate with user credentials\n",
-    "You can authenticate the Python SDK with Azure AD by using a token retrieved with user credentials.\n",
-    "\n",
     "#### Interactive Login\n",
-    "You can get the token by letting the user sign in interactively via a browser and use the authenticate with interactive login and token refresh flow to access CDF when you're running short-term scripts or using Jupyter."
+    "You can get the token by letting the user sign in interactively via a browser and use the authenticate with interactive login to access CDF when you're running short-term scripts or using Jupyter."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "-WNZiPG_hDwB"
    },
@@ -119,19 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "credentials = OAuthInteractive(\n",
-    "    authority_url=f\"https://login.microsoftonline.com/{TENANT_ID}\",\n",
+    "credentials = OAuthInteractive.default_for_entra_id(\n",
+    "    tenant_id=TENANT_ID,\n",
     "    client_id=CLIENT_ID,\n",
-    "    scopes=[f\"{BASE_URL}/.default\"],\n",
+    "    cdf_cluster=CDF_CLUSTER,\n",
     ")\n",
     "config = ClientConfig(\n",
     "    client_name=\"Cognite Academy course taker\",\n",
     "    project=COGNITE_PROJECT,\n",
-    "    base_url=BASE_URL,\n",
+    "    cluster=CDF_CLUSTER,\n",
     "    credentials=credentials,\n",
     ")\n",
     "client = CogniteClient(config)"
@@ -148,11 +135,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = client.iam.token.inspect()\n",
+    "response = client.iam.token.inspect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['learn',\n",
+       " 'academy-atlas-ai',\n",
+       " 'ds-cognitefunctions',\n",
+       " 'atlas-ai',\n",
+       " 'learn-cdf',\n",
+       " 'ds-basics',\n",
+       " 'learn-to-demo-cdf',\n",
+       " 'cognite-charts']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "[proj.url_name for proj in response.projects]"
    ]
   },
@@ -166,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -180,9 +193,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
